; ModuleID = '/home/carl/AnghaBench/jq/src/decNumber/extr_decNumber.c_decNumberExp.c'
source_filename = "/home/carl/AnghaBench/jq/src/decNumber/extr_decNumber.c_decNumberExp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_23__ = type { i64 }
%struct.TYPE_24__ = type { i64, i32 }

@DECUNUSED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_23__* @decNumberExp(%struct.TYPE_23__* %0, %struct.TYPE_23__* %1, %struct.TYPE_24__* %2) #0 {
  %4 = alloca %struct.TYPE_23__*, align 8
  %5 = alloca %struct.TYPE_23__*, align 8
  %6 = alloca %struct.TYPE_24__*, align 8
  %7 = alloca i64, align 8
  store %struct.TYPE_23__* %0, %struct.TYPE_23__** %4, align 8
  store %struct.TYPE_23__* %1, %struct.TYPE_23__** %5, align 8
  store %struct.TYPE_24__* %2, %struct.TYPE_24__** %6, align 8
  store i64 0, i64* %7, align 8
  %8 = load %struct.TYPE_23__*, %struct.TYPE_23__** %5, align 8
  %9 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %10 = call i32 @decCheckMath(%struct.TYPE_23__* %8, %struct.TYPE_24__* %9, i64* %7)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %19, label %12

12:                                               ; preds = %3
  br label %13

13:                                               ; preds = %12
  %14 = load %struct.TYPE_23__*, %struct.TYPE_23__** %4, align 8
  %15 = load %struct.TYPE_23__*, %struct.TYPE_23__** %5, align 8
  %16 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %17 = call i32 @decExpOp(%struct.TYPE_23__* %14, %struct.TYPE_23__* %15, %struct.TYPE_24__* %16, i64* %7)
  br label %18

18:                                               ; preds = %13
  br label %19

19:                                               ; preds = %18, %3
  %20 = load i64, i64* %7, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %27

22:                                               ; preds = %19
  %23 = load %struct.TYPE_23__*, %struct.TYPE_23__** %4, align 8
  %24 = load i64, i64* %7, align 8
  %25 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %26 = call i32 @decStatus(%struct.TYPE_23__* %23, i64 %24, %struct.TYPE_24__* %25)
  br label %27

27:                                               ; preds = %22, %19
  %28 = load %struct.TYPE_23__*, %struct.TYPE_23__** %4, align 8
  ret %struct.TYPE_23__* %28
}

declare dso_local i32 @decCheckMath(%struct.TYPE_23__*, %struct.TYPE_24__*, i64*) #1

declare dso_local i32 @decExpOp(%struct.TYPE_23__*, %struct.TYPE_23__*, %struct.TYPE_24__*, i64*) #1

declare dso_local i32 @decStatus(%struct.TYPE_23__*, i64, %struct.TYPE_24__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
